# lm

./: .gitignore  Cargo.toml  LICENSE  README.md  blog-post.md
.github/workflows/: ci.yml
benchmark/: README.md  run_benchmark.sh
benchmark/comparison/: adversarial_tasks.json  blind_benchmark.mjs  run.sh  tasks.json
benchmark/comparison/results/: blind_gemini-2.5-flash_2026-04-26.json  summary.txt
benchmark/tasks/01_hello/: expected.txt  prompt.md  solution.lm  test.lm
benchmark/tasks/02_reverse_string/: expected.txt  prompt.md  solution.lm  test.lm
benchmark/tasks/03_palindrome/: expected.txt  prompt.md  solution.lm  test.lm
benchmark/tasks/04_count_vowels/: expected.txt  prompt.md  solution.lm  test.lm
benchmark/tasks/05_caesar_cipher/: expected.txt  prompt.md  solution.lm  test.lm
benchmark/tasks/06_string_repeat/: prompt.md  solution.lm
benchmark/tasks/07_fibonacci/: prompt.md  solution.lm  test.lm
benchmark/tasks/08_factorial/: prompt.md  solution.lm
crates/lm-cli/: Cargo.toml
crates/lm-cli/src/: main.rs
crates/lm-diagnostics/: Cargo.toml
crates/lm-eval/: Cargo.toml
crates/lm-eval/src/: builtins.rs  env.rs  lib.rs  tests.rs  value.rs
crates/lm-lexer/: Cargo.toml
crates/lm-lexer/src/: lib.rs  tests.rs  token.rs
crates/lm-lexer/tests/: integration.rs
crates/lm-lsp/: Cargo.toml
crates/lm-lsp/src/: analysis.rs  convert.rs  lib.rs  main.rs  server.rs
crates/lm-parser/: Cargo.toml
crates/lm-parser/src/: ast.rs  lib.rs  tests.rs
crates/lm-parser/src/snapshots/: lm_parser__tests__block_expr.snap  lm_parser__tests__bool_literal.snap  lm_parser__tests__calculator_example.snap  lm_parser__tests__error_missing_arrow_in_match.snap  lm_parser__tests__error_missing_else.snap  lm_parser__tests__error_missing_eq_in_let.snap  lm_parser__tests__error_missing_semicolon.snap  lm_parser__tests__error_unclosed_paren.snap  lm_parser__tests__error_unexpected_token.snap  lm_parser__tests__float_literal.snap  lm_parser__tests__fn_no_annotations.snap  lm_parser__tests__fn_with_annotations.snap  lm_parser__tests__function_call.snap  lm_parser__tests__hello_example.snap  lm_parser__tests__if_else.snap  lm_parser__tests__integer_literal.snap  lm_parser__tests__io_fn.snap  lm_parser__tests__left_associativity.snap  lm_parser__tests__match_expr.snap  lm_parser__tests__match_variant_pattern.snap  lm_parser__tests__multi_error_recovery.snap  lm_parser__tests__nested_function_call.snap  lm_parser__tests__parenthesized_expr.snap  lm_parser__tests__precedence_add_mul.snap  lm_parser__tests__precedence_comparison.snap  lm_parser__tests__precedence_logical.snap  lm_parser__tests__string_concat.snap  lm_parser__tests__string_literal.snap  lm_parser__tests__type_annotation_generic.snap  lm_parser__tests__type_def.snap  lm_parser__tests__type_def_with_type_params.snap  lm_parser__tests__unary_neg.snap  lm_parser__tests__unary_not.snap  lm_parser__tests__variant_construct.snap  lm_parser__tests__variant_construct_unit.snap
crates/lm-types/: Cargo.toml
crates/lm-types/src/: effects.rs  env.rs  exhaustiveness.rs  infer.rs  lib.rs  tests.rs  types.rs  unify.rs
docs/: llm-reference.md  quickstart.md  tutorial.md
editors/vscode/: language-configuration.json  lm-lang-0.1.0.vsix  package.json
examples/: calculator.lm  demo.lm  errors.lm  hello.lm
(+382 files in other folders)
