[workspace]
resolver = "2"
members = [
    "crates/lm-diagnostics",
    "crates/lm-lexer",
    "crates/lm-parser",
    "crates/lm-types",
    "crates/lm-eval",
    "crates/lm-cli",
    "crates/lm-lsp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
insta = "1"
