[package]
name = "lm-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP server for the LM programming language"

[[bin]]
name = "lm-lsp"
path = "src/main.rs"

[dependencies]
lm-diagnostics = { path = "../lm-diagnostics" }
lm-lexer = { path = "../lm-lexer" }
lm-parser = { path = "../lm-parser" }
lm-types = { path = "../lm-types" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
